# aboutmig

./: .clang-format  .gitignore  .markdownlint.json  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  STANDARDS.md  install  install.sh
doc/: errorcodes.md  install.md  usage.md
include/: colorcodes.h  log.h
include/storage/: datafiles.h  directory.h  folder.h
src/: log.cpp  main.cpp
src/storage/: datafiles.cpp  directory.cpp  folder.cpp
